Fixed spacing for columns. Added sorting icons.

--- a/app/assets/stylesheets/parties.css.scss
+++ b/app/assets/stylesheets/parties.css.scss
@@ -70,70 +70,11 @@
   }
 }
 
-@mixin set-th-width() {
-  th:nth-child(1) {
-    width: 40px;
-    max-width: 40px;
-    min-width: 40px;
-  }
-  th:nth-child(2) {
-    width: 60px;
-    max-width: 60px;
-    min-width: 60px;
-  }
-  th:nth-child(3) {
-    width: 40px;
-    max-width: 40px;
-    min-width: 40px;
-  }
-  th:nth-child(4) {
-    width: 10px;
-    max-width: 10px;
-    min-width: 10px;
-  }
-  th:nth-child(5) {
-    width: 10px;
-    max-width: 10px;
-    min-width: 10px;
-  }
-  th:nth-child(6) {
-    width: 10px;
-    max-width: 10px;
-    min-width: 10px;
-  }
-  th:nth-child(7) {
-    width: 10px;
-    max-width: 10px;
-    min-width: 10px;
-  }
-  th:nth-child(8) {
-    width: 10px;
-    max-width: 10px;
-    min-width: 10px;
-  }
-  th:nth-child(9) {
-    width: 30px;
-    max-width: 30px;
-    min-width: 30px;
-  }
-  th:nth-child(10) {
-    width: 5px;
-    max-width: 5px;
-    min-width: 5px;
-  }
-}
-
 .green {
   color: green;
 }
 
 table.parties {
-  thead {
-    @include set-th-width();
-    th {
-      width: 10%;
-    }
-  }
   tr {
     td {
       margin: 0 !important;
@@ -141,9 +82,6 @@ table.parties {
     }
     table {
       width: 100%;
-      .party {
-        @include set-td-width();
-      }
     }
   }
 }
